fix(xod-client): update `react-custom-scroll` and fix styles to make sure that scrollbars are invisible in sidebars

--- a/packages/xod-client/src/core/styles/components/CustomScroll.scss
+++ b/packages/xod-client/src/core/styles/components/CustomScroll.scss
@@ -18,6 +18,13 @@
     overflow-x: hidden;
     overflow-y: scroll;
 
+    &::-webkit-scrollbar {
+      background: transparent;
+      border-color: transparent;
+      box-shadow: none;
+      width: 0;
+    }
+
     &:after{
       content: '';
       position: absolute;
