--- a/packages/xod-client/src/core/styles/components/Sidebar.scss
+++ b/packages/xod-client/src/core/styles/components/Sidebar.scss
@@ -98,8 +98,9 @@
 }
 
 
+// Kludge to fix a protruding edge of scrollbar on some OS (Linux)
 .Sidebar .custom-scroll {
   .outer-container { width: 200px; }
-  .inner-container { margin-right: -2em; padding-right: 0; }
-  .content-wrapper { margin-right: 0; padding-right: 0; width: 200px; }
+  .inner-container { margin-right: -100px !important; }
+  .content-wrapper { width: 200px; }
 }
